--- a/css/pages/home/home.less
+++ b/css/pages/home/home.less
@@ -1,5 +1,171 @@
-.vission{
-	background-color: red;
-	height:100vh;
+//seting page
+.page {
+	margin: 0;
+	padding: 0;
+	min-height: 100vh;
+}
 
+//animation on opening page
+.load {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	pointer-events: none;
+	z-index: 10000;
+}
+
+//fixing frame setup
+.load .frame {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	transform-origin: top;
+	animation: load 2s ease-in-out forwards;
+}
+
+.load .frame:nth-child(1) {
+	background: @color1;
+	z-index: 2;
+}
+
+.load .frame:nth-child(2) {
+	background: @color2;
+	animation-delay: 1.8s;
+	z-index: 1;
+}
+
+@keyframes load {
+	0% {
+		transform: scaleY(1);
+	}
+
+	100% {
+		transform: scaleY(0);
+	}
+
+}
+
+// end of frame setup.
+
+
+
+//frame content animation:
+.framebanner {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: @color3;
+	display: grid;
+	justify-content: center;
+	align-items: center;
+}
+
+// text animation:
+.banner {
+	position: absolute;
+	top: 50%;
+	left: 10%;
+	transform: translateY(-50%);
+	max-width: 700px;
+}
+
+.banner h1,
+h2 {
+	position: relative;
+	text-transform: uppercase;
+	margin: 0;
+	padding: 0;
+	display: block;
+	transform-origin: left;
+	transform: scaleX(1);
+}
+
+.banner h1 {
+	font-size: 6em;
+}
+
+.banner h2 {
+	font-size: 3em;
+}
+
+.banner h1:before,
+.banner h2:before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	background: @color1;
+	width: 100%;
+	height: 100%;
+	transform-origin: right;
+	animation: bannertext 1s ease-in-out forwards;
+	animation-delay: 4s;
+}
+
+.banner h2:before {
+	animation-delay: 3s;
+}
+
+@keyframes bannertext {
+	0% {
+		transform: scale(1);
+	}
+
+	100% {
+		transform: scaleX(0);
+	}
+
+}
+
+// end of text animation
+
+// banner paragraph
+.banner p {
+	opacity: 0;
+	letter-spacing: 2px;
+	font-weight: 300px;
+	animation: fadein 1s linear forwards;
+	animation-delay: 4s;
+}
+
+@keyframes fadein {
+	0% {
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 1;
+	}
+
+}
+
+// end of paragraph animation
+
+.banner a {
+	opacity: 0;
+	display: inline-block;
+	margin:20px 0 0;
+	padding: 10px 20px;
+	border: none;
+	background:@color1; 
+	color: @color2;
+	font-weight:400;
+	text-decoration:none;
+	letter-spacing: 2px;
+	animation: fadeina 2s linear forwards;
+	animation-delay: 5s;
+}
+@keyframes fadeina{
+	0%{
+		transform: translateY(50px);
+		opacity: 0;
+	}
+	100% {
+		transform: translateY(0);
+		opacity: 1;
+	}
 }
